# web-file-browser

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  env.example  gradle.properties  settings.gradle.kts
deploy/unraid/: web-file-browser.xml
docs/: API_CONTRACT.md  API_ERRORS.md  BACKEND_REVIEW_PLAN.md  DOCKER_DEPLOY.md  PROJECT_BOUNDARY.md  ROADMAP.md  TASK_BACKLOG.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: docker-perf-smoke.sh  docker-smoke.sh  package-windows.bat
src/: app.rs  config.rs  error.rs  main.rs  models.rs
src/app/: tests.rs
src/app/tests/: audit.rs  auth.rs  common.rs  favorites.rs  file.rs  mapping.rs  ops.rs  search.rs  settings.rs  tasks.rs  trash.rs
src/main/resources/: application.conf
src/routes/: audit.rs  auth.rs  favorites.rs  file.rs  mapping.rs  mod.rs  ops.rs  search.rs  settings.rs  tasks.rs  trash.rs
src/services/: audit.rs  auth.rs  auth_store.rs  conflict.rs  favorites.rs  file_ops.rs  mapping_store.rs  mod.rs  path_display.rs  path_resolver.rs  request_limits.rs  reserved.rs  search.rs  settings.rs  task_io.rs  tasks.rs  transfer.rs  trash.rs
src/services/path_resolver/: listing.rs  tests.rs
ui/: package.json  tsconfig.json  vite.config.ts
ui/src/: App.vue  class.ts  config.ts  main.ts  style.css
ui/src/assets/: editor-config.json  iconfont.js
ui/src/components/: AppIcon.vue  Breadcrumb.vue  Card.vue  CodeEditor.vue  FileTree.vue  FileTreeContextMenu.vue  FileTreeNode.vue  FileTypeIcon.vue  Icon.vue  Split.vue  SubCard.vue  TabBar.vue  TabItem.vue  (+1 more)
(+171 files in other folders)
